--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,7 @@
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>xxxxxx.yyyyyy.zzzzzz.App</param-value>
+        <param-value>com.github.nguyentrucxinh.foodmenulist.App</param-value>
     </context-param>
 
     <listener>
@@ -50,6 +50,6 @@
         <url-pattern>/*</url-pattern>
     </filter-mapping>
     <listener>
-        <listener-class>xxxxxx.yyyyyy.zzzzzz.OfyHelper</listener-class>
+        <listener-class>com.github.nguyentrucxinh.foodmenulist.OfyHelper</listener-class>
     </listener>
 </web-app>
