Add config service for frontend

--- a/frontend/app.yaml
+++ b/frontend/app.yaml
@@ -1,9 +1,10 @@
 runtime: python27
+# service: ui
 api_version: 1
 threadsafe: true
 handlers:
 - url: /
-  static_files: build/index.html
-  upload: build/index.html
+  static_files: template/index.html
+  upload: template/index.html
 - url: /
-  static_dir: build
+  static_dir: template
