--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -9,7 +9,7 @@
     <packaging>war</packaging>
 
     <name>food-menu-list</name>
-    <description>Webservice for Food Menud list site</description>
+    <description>Webservice for Food Menu list site</description>
 
     <parent>
         <groupId>org.springframework.boot</groupId>
@@ -28,8 +28,9 @@
         <appengine.target.version>1.9.58</appengine.target.version>
         <guava.version>20.0</guava.version>
         <objectify.version>5.1.12</objectify.version>
-        <maven.war.version>3.1.0</maven.war.version>
-        <versions.maven>2.4</versions.maven>
+        <maven.war.plugin.version>3.1.0</maven.war.plugin.version>
+        <versions.maven.plugin.version>2.4</versions.maven.plugin.version>
+        <appengine.maven.plugin.version>1.3.1</appengine.maven.plugin.version>
     </properties>
 
     <dependencies>
@@ -114,7 +115,7 @@
             <plugin>
                 <groupId>com.google.cloud.tools</groupId>
                 <artifactId>appengine-maven-plugin</artifactId>
-                <version>1.3.1</version>
+                <version>${appengine.maven.plugin.version}</version>
                 <configuration>
                 </configuration>
             </plugin>
@@ -123,7 +124,7 @@
             <plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>versions-maven-plugin</artifactId>
-                <version>${versions.maven}</version>
+                <version>${versions.maven.plugin.version}</version>
                 <executions>
                     <execution>
                         <phase>compile</phase>
@@ -143,7 +144,7 @@
 
             <plugin>
                 <artifactId>maven-war-plugin</artifactId>
-                <version>${maven.war.version}</version>
+                <version>${maven.war.plugin.version}</version>
                 <configuration>
                     <failOnMissingWebXml>false</failOnMissingWebXml>
                 </configuration>
