--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -25,6 +25,7 @@
         <maven.compiler.source>${java.version}</maven.compiler.source>
         <maven.compiler.target>${java.version}</maven.compiler.target>
 
+        <servlet.api.version>3.1.0</servlet.api.version>
         <appengine.target.version>1.9.58</appengine.target.version>
         <guava.version>20.0</guava.version>
         <objectify.version>5.1.12</objectify.version>
@@ -59,7 +60,7 @@
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>3.1.0</version>
+            <version>${servlet.api.version}</version>
             <scope>provided</scope>
         </dependency>
 
