--- a/backend/src/main/resources/application.yml
+++ b/backend/src/main/resources/application.yml
@@ -2,6 +2,9 @@ spring:
     profiles:
         active: prod
 
+google-cloud-platform:
+  google-cloud-storage:
+    bucket-name: foodmenulist.appspot.com
 ---
 
 spring:
