--- a/frontend/admin/package.json
+++ b/frontend/admin/package.json
@@ -23,7 +23,8 @@
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
     "rxjs": "^5.4.1",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.14",
+    "file-saver": "^1.3.3"
   },
   "devDependencies": {
     "@angular/cli": "1.2.3",
