--- a/frontend/admin/package.json
+++ b/frontend/admin/package.json
@@ -8,7 +8,11 @@
     "build": "ng build -op ../admin_deploy/dist",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "dev": "ng s -dev",
+    "prod": "ng s -prod",
+    "build-dev": "ng b -dev -op ../admin_deploy/dist",
+    "build-prod": "ng b -prod -op ../admin_deploy/dist"
   },
   "private": true,
   "dependencies": {
@@ -22,9 +26,10 @@
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
     "core-js": "^2.4.1",
+    "enhanced-resolve": "^3.3.0",
+    "file-saver": "^1.3.3",
     "rxjs": "^5.4.1",
-    "zone.js": "^0.8.14",
-    "file-saver": "^1.3.3"
+    "zone.js": "^0.8.14"
   },
   "devDependencies": {
     "@angular/cli": "1.2.3",
